--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits">
             <li>
+              <div class="benefit-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antena"></use>
+                </svg>
+              </div>
               <h3 class="benefit-name">Strategy</h3>
               <p class="benefit-description">
                 Our goal is to identify the business problem to walk away with the perfect and
@@ -66,6 +71,11 @@
               </p>
             </li>
             <li>
+              <div class="benefit-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock1"></use>
+                </svg>
+              </div>
               <h3 class="benefit-name">Punctuality</h3>
               <p class="benefit-description">
                 Bring the key message to the brand's audience for the best price within the shortest
@@ -73,6 +83,11 @@
               </p>
             </li>
             <li>
+              <div class="benefit-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram1"></use>
+                </svg>
+              </div>
               <h3 class="benefit-name">Diligence</h3>
               <p class="benefit-description">
                 Research and confirm brands that present the strongest digital growth opportunities
@@ -80,6 +95,11 @@
               </p>
             </li>
             <li>
+              <div class="benefit-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut1"></use>
+                </svg>
+              </div>
               <h3 class="benefit-name">Technologies</h3>
               <p class="benefit-description">
                 Design practice focused on digital experiences. We bring forth a deep passion for
@@ -121,6 +141,28 @@
               <div class="card-info">
                 <h3 class="worker-name">Mark Guerrero</h3>
                 <p class="worker-position">Product Designer</p>
+                <div class="socials">
+                  <a href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram2"></use>
+                    </svg>
+                  </a>
+                  <a href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter1"></use>
+                    </svg>
+                  </a>
+                  <a href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook1"></use>
+                    </svg>
+                  </a>
+                  <a href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin1"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li>
@@ -128,6 +170,28 @@
               <div class="card-info">
                 <h3 class="worker-name">Tom Ford</h3>
                 <p class="worker-position">Frontend Developer</p>
+                <div class="socials">
+                  <a href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram2"></use>
+                    </svg>
+                  </a>
+                  <a href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter1"></use>
+                    </svg>
+                  </a>
+                  <a href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook1"></use>
+                    </svg>
+                  </a>
+                  <a href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin1"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li>
@@ -135,6 +199,28 @@
               <div class="card-info">
                 <h3 class="worker-name">Camila Garcia</h3>
                 <p class="worker-position">Marketing</p>
+                <div class="socials">
+                  <a href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram2"></use>
+                    </svg>
+                  </a>
+                  <a href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter1"></use>
+                    </svg>
+                  </a>
+                  <a href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook1"></use>
+                    </svg>
+                  </a>
+                  <a href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin1"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li>
@@ -142,7 +228,66 @@
               <div class="card-info">
                 <h3 class="worker-name">Daniel Wilson</h3>
                 <p class="worker-position">UI Designer</p>
+                <div class="socials">
+                  <a href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram2"></use>
+                    </svg>
+                  </a>
+                  <a href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter1"></use>
+                    </svg>
+                  </a>
+                  <a href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook1"></use>
+                    </svg>
+                  </a>
+                  <a href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin1"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container">
+          <h2 class="customers-header">Customers</h2>
+          <ul class="customers-icons">
+            <li>
+              <svg width="104" height="56">
+                <use href="./images/icons.svg#icon-client1"></use>
+              </svg>
+            </li>
+            <li>
+              <svg width="104" height="56">
+                <use href="./images/icons.svg#icon-client2"></use>
+              </svg>
+            </li>
+            <li>
+              <svg width="104" height="56">
+                <use href="./images/icons.svg#icon-client3"></use>
+              </svg>
+            </li>
+            <li>
+              <svg width="104" height="56">
+                <use href="./images/icons.svg#icon-client4"></use>
+              </svg>
+            </li>
+            <li>
+              <svg width="104" height="56">
+                <use href="./images/icons.svg#icon-client5"></use>
+              </svg>
+            </li>
+            <li>
+              <svg width="104" height="56">
+                <use href="./images/icons.svg#icon-client6"></use>
+              </svg>
             </li>
           </ul>
         </div>
@@ -151,11 +296,38 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
+        <div class="logos">
+          <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
+        </div>
+        <div class="footer-socials">
+          <h3 class="socials-header">Social media</h3>
+          <div class="social-links">
+            <a href="#">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram2"></use>
+              </svg>
+            </a>
+            <a href="#">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter1"></use>
+              </svg>
+            </a>
+            <a href="#">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook1"></use>
+              </svg>
+            </a>
+            <a href="#">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin1"></use>
+              </svg>
+            </a>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
