changed svg, added hovers

--- a/index.html
+++ b/index.html
@@ -260,32 +260,32 @@
           <h2 class="customers-header">Customers</h2>
           <ul class="customers-icons">
             <li>
-              <svg width="104" height="56">
+              <svg width="104" height="56" class="customers-svg">
                 <use href="./images/icons.svg#icon-client1"></use>
               </svg>
             </li>
             <li>
-              <svg width="104" height="56">
+              <svg width="104" height="56" class="customers-svg">
                 <use href="./images/icons.svg#icon-client2"></use>
               </svg>
             </li>
             <li>
-              <svg width="104" height="56">
+              <svg width="104" height="56" class="customers-svg">
                 <use href="./images/icons.svg#icon-client3"></use>
               </svg>
             </li>
             <li>
-              <svg width="104" height="56">
+              <svg width="104" height="56" class="customers-svg">
                 <use href="./images/icons.svg#icon-client4"></use>
               </svg>
             </li>
             <li>
-              <svg width="104" height="56">
+              <svg width="104" height="56" class="customers-svg">
                 <use href="./images/icons.svg#icon-client5"></use>
               </svg>
             </li>
             <li>
-              <svg width="104" height="56">
+              <svg width="104" height="56" class="customers-svg">
                 <use href="./images/icons.svg#icon-client6"></use>
               </svg>
             </li>
