--- a/portfolio.html
+++ b/portfolio.html
@@ -152,11 +152,38 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
+        <div class="logos">
+          <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
+        </div>
+        <div class="footer-socials">
+          <h3 class="socials-header">Social media</h3>
+          <div class="social-links">
+            <a href="#">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram2"></use>
+              </svg>
+            </a>
+            <a href="#">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter1"></use>
+              </svg>
+            </a>
+            <a href="#">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook1"></use>
+              </svg>
+            </a>
+            <a href="#">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin1"></use>
+              </svg>
+            </a>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
