--- a/portfolio.html
+++ b/portfolio.html
@@ -58,92 +58,110 @@
           </ul>
           <ul class="cards">
             <li>
-              <img src="./images/banking_app.jpg" width="360" height="300" alt="banking app" />
-              <div class="description">
-                <h2 class="project-name">Banking App Interface Concept</h2>
-                <p class="project-type">App</p>
-              </div>
+              <a href="#" class="card-link">
+                <img src="./images/banking_app.jpg" width="360" height="300" alt="banking app" />
+                <div class="description">
+                  <h2 class="project-name">Banking App Interface Concept</h2>
+                  <p class="project-type">App</p>
+                </div>
+              </a>
             </li>
             <li>
-              <img
-                src="./images/cashless_payment.jpg"
-                width="360"
-                height="300"
-                alt="cashless payment"
-              />
-              <div class="description">
-                <h2 class="project-name">Cashless Payment</h2>
-                <p class="project-type">Marketing</p>
-              </div>
+              <a href="#" class="card-link">
+                <img
+                  src="./images/cashless_payment.jpg"
+                  width="360"
+                  height="300"
+                  alt="cashless payment"
+                />
+                <div class="description">
+                  <h2 class="project-name">Cashless Payment</h2>
+                  <p class="project-type">Marketing</p>
+                </div>
+              </a>
             </li>
             <li>
-              <img
-                src="./images/meditation_app.jpg"
-                width="360"
-                height="300"
-                alt="meditation app"
-              />
-              <div class="description">
-                <h2 class="project-name">Meditation App</h2>
-                <p class="project-type">App</p>
-              </div>
+              <a href="#" class="card-link">
+                <img
+                  src="./images/meditation_app.jpg"
+                  width="360"
+                  height="300"
+                  alt="meditation app"
+                />
+                <div class="description">
+                  <h2 class="project-name">Meditation App</h2>
+                  <p class="project-type">App</p>
+                </div>
+              </a>
             </li>
             <li>
-              <img src="./images/taxi_service.jpg" width="360" height="300" alt="taxi service" />
-              <div class="description">
-                <h2 class="project-name">Taxi Service</h2>
-                <p class="project-type">Marketing</p>
-              </div>
+              <a href="#" class="card-link">
+                <img src="./images/taxi_service.jpg" width="360" height="300" alt="taxi service" />
+                <div class="description">
+                  <h2 class="project-name">Taxi Service</h2>
+                  <p class="project-type">Marketing</p>
+                </div>
+              </a>
             </li>
             <li>
-              <img
-                src="./images/screen_illustrations.jpg"
-                width="360"
-                height="300"
-                alt="screen illustrations"
-              />
-              <div class="description">
-                <h2 class="project-name">Screen Illustrations</h2>
-                <p class="project-type">Design</p>
-              </div>
+              <a href="#" class="card-link">
+                <img
+                  src="./images/screen_illustrations.jpg"
+                  width="360"
+                  height="300"
+                  alt="screen illustrations"
+                />
+                <div class="description">
+                  <h2 class="project-name">Screen Illustrations</h2>
+                  <p class="project-type">Design</p>
+                </div>
+              </a>
             </li>
             <li>
-              <img
-                src="./images/online_courses.jpg"
-                width="360"
-                height="300"
-                alt="online courses"
-              />
-              <div class="description">
-                <h2 class="project-name">Online Courses</h2>
-                <p class="project-type">Marketing</p>
-              </div>
+              <a href="#" class="card-link">
+                <img
+                  src="./images/online_courses.jpg"
+                  width="360"
+                  height="300"
+                  alt="online courses"
+                />
+                <div class="description">
+                  <h2 class="project-name">Online Courses</h2>
+                  <p class="project-type">Marketing</p>
+                </div>
+              </a>
             </li>
             <li>
-              <img
-                src="./images/instagram_stories.jpg"
-                width="360"
-                height="300"
-                alt="instagram stories concept"
-              />
-              <div class="description">
-                <h2 class="project-name">Instagram Stories Concept</h2>
-                <p class="project-type">Design</p>
-              </div>
+              <a href="#" class="card-link">
+                <img
+                  src="./images/instagram_stories.jpg"
+                  width="360"
+                  height="300"
+                  alt="instagram stories concept"
+                />
+                <div class="description">
+                  <h2 class="project-name">Instagram Stories Concept</h2>
+                  <p class="project-type">Design</p>
+                </div>
+              </a>
             </li>
             <li>
-              <img src="./images/organic_food.jpg" width="360" height="300" alt="organic food" />
-              <div class="description">
-                <h2 class="project-name">Organic Food</h2>
-                <p class="project-type">Web Site</p>
-              </div>
+              <a href="#" class="card-link">
+                <img src="./images/organic_food.jpg" width="360" height="300" alt="organic food" />
+                <div class="description">
+                  <h2 class="project-name">Organic Food</h2>
+                  <p class="project-type">Web Site</p>
+                </div>
+              </a>
             </li>
             <li>
-              <img src="./images/fresh_coffee.jpg" width="360" height="300" alt="fresh coffee" />
-              <div class="description">
-                <h2 class="project-name">Fresh Coffee</h2>
-                <p class="project-type">Web Site</p>
-              </div>
+              <a href="#" class="card-link">
+                <img src="./images/fresh_coffee.jpg" width="360" height="300" alt="fresh coffee" />
+                <div class="description">
+                  <h2 class="project-name">Fresh Coffee</h2>
+                  <p class="project-type">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -160,29 +178,37 @@
           </p>
         </div>
         <div class="footer-socials">
-          <h3 class="socials-header">Social media</h3>
-          <div class="social-links">
-            <a href="#">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram2"></use>
-              </svg>
-            </a>
-            <a href="#">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter1"></use>
-              </svg>
-            </a>
-            <a href="#">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook1"></use>
-              </svg>
-            </a>
-            <a href="#">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin1"></use>
-              </svg>
-            </a>
-          </div>
+          <p>Social media</p>
+          <ul class="social-links">
+            <li class="social-links-el">
+              <a href="#">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-links-el">
+              <a href="#">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-links-el">
+              <a href="#">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-links-el">
+              <a href="#">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
