--- a/index.html
+++ b/index.html
@@ -141,28 +141,36 @@
               <div class="card-info">
                 <h3 class="worker-name">Mark Guerrero</h3>
                 <p class="worker-position">Product Designer</p>
-                <div class="socials">
-                  <a href="#">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram2"></use>
-                    </svg>
-                  </a>
-                  <a href="#">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter1"></use>
-                    </svg>
-                  </a>
-                  <a href="#">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook1"></use>
-                    </svg>
-                  </a>
-                  <a href="#">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin1"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="socials">
+                  <li>
+                    <a href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
@@ -170,28 +178,36 @@
               <div class="card-info">
                 <h3 class="worker-name">Tom Ford</h3>
                 <p class="worker-position">Frontend Developer</p>
-                <div class="socials">
-                  <a href="#">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram2"></use>
-                    </svg>
-                  </a>
-                  <a href="#">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter1"></use>
-                    </svg>
-                  </a>
-                  <a href="#">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook1"></use>
-                    </svg>
-                  </a>
-                  <a href="#">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin1"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="socials">
+                  <li>
+                    <a href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
@@ -199,28 +215,36 @@
               <div class="card-info">
                 <h3 class="worker-name">Camila Garcia</h3>
                 <p class="worker-position">Marketing</p>
-                <div class="socials">
-                  <a href="#">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram2"></use>
-                    </svg>
-                  </a>
-                  <a href="#">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter1"></use>
-                    </svg>
-                  </a>
-                  <a href="#">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook1"></use>
-                    </svg>
-                  </a>
-                  <a href="#">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin1"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="socials">
+                  <li>
+                    <a href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
@@ -228,28 +252,36 @@
               <div class="card-info">
                 <h3 class="worker-name">Daniel Wilson</h3>
                 <p class="worker-position">UI Designer</p>
-                <div class="socials">
-                  <a href="#">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram2"></use>
-                    </svg>
-                  </a>
-                  <a href="#">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter1"></use>
-                    </svg>
-                  </a>
-                  <a href="#">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook1"></use>
-                    </svg>
-                  </a>
-                  <a href="#">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin1"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="socials">
+                  <li>
+                    <a href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -260,34 +292,46 @@
           <h2 class="customers-header">Customers</h2>
           <ul class="customers-icons">
             <li>
-              <svg width="104" height="56" class="customers-svg">
-                <use href="./images/icons.svg#icon-client1"></use>
-              </svg>
+              <a href="#">
+                <svg width="104" height="56" class="customers-svg">
+                  <use href="./images/icons.svg#icon-client1"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <svg width="104" height="56" class="customers-svg">
-                <use href="./images/icons.svg#icon-client2"></use>
-              </svg>
+              <a href="#">
+                <svg width="104" height="56" class="customers-svg">
+                  <use href="./images/icons.svg#icon-client2"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <svg width="104" height="56" class="customers-svg">
-                <use href="./images/icons.svg#icon-client3"></use>
-              </svg>
+              <a href="#">
+                <svg width="104" height="56" class="customers-svg">
+                  <use href="./images/icons.svg#icon-client3"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <svg width="104" height="56" class="customers-svg">
-                <use href="./images/icons.svg#icon-client4"></use>
-              </svg>
+              <a href="#">
+                <svg width="104" height="56" class="customers-svg">
+                  <use href="./images/icons.svg#icon-client4"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <svg width="104" height="56" class="customers-svg">
-                <use href="./images/icons.svg#icon-client5"></use>
-              </svg>
+              <a href="#">
+                <svg width="104" height="56" class="customers-svg">
+                  <use href="./images/icons.svg#icon-client5"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <svg width="104" height="56" class="customers-svg">
-                <use href="./images/icons.svg#icon-client6"></use>
-              </svg>
+              <a href="#">
+                <svg width="104" height="56" class="customers-svg">
+                  <use href="./images/icons.svg#icon-client6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -304,29 +348,37 @@
           </p>
         </div>
         <div class="footer-socials">
-          <h3 class="socials-header">Social media</h3>
-          <div class="social-links">
-            <a href="#">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram2"></use>
-              </svg>
-            </a>
-            <a href="#">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter1"></use>
-              </svg>
-            </a>
-            <a href="#">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook1"></use>
-              </svg>
-            </a>
-            <a href="#">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin1"></use>
-              </svg>
-            </a>
-          </div>
+          <p>Social media</p>
+          <ul class="social-links">
+            <li class="social-links-el">
+              <a href="#">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-links-el">
+              <a href="#">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-links-el">
+              <a href="#">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-links-el">
+              <a href="#">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
